dataset1235/2025-2/2318198438/users/3878856075/executions/1897677159_1078076002.log
== RUN (2025-08-27 05:42:32)
-- CODE: 

#1 caso ele pede para imprimir aquele valor entao estaria faltando o print
#2 caso faltou as aspas, para o programa funcionar precisa estar sem erros
#3 caso faltou fechar parentese o programa nao funciona com erros
#4 caso esta pra imprimir o x2, mas a saída teria de ser x1 entao está errado
x1=1.23
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 05:29:04)
-- CODE: 

#1 caso ele pede para imprimir aquele valor entao estaria faltando o print
x1="Ufam
print(x1)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 3
    x1="Ufam
       ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 3
    x1="Ufam
       ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 05:42:35)
-- CODE: 

#1 caso ele pede para imprimir aquele valor entao estaria faltando o print
#2 caso faltou as aspas, para o programa funcionar precisa estar sem erros
#3 caso faltou fechar parentese o programa nao funciona com erros
#4 caso esta pra imprimir o x2, mas a saída teria de ser x1 entao está errado
x1=1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:30:09)
-- CODE: 

#1 caso ele pede para imprimir aquele valor entao estaria faltando o print
#2 caso faltou as aspas, para o programa funcionar precisa estar sem erros
X1="Ufam
print(X1
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 4
    X1="Ufam
       ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 4
    X1="Ufam
       ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:26:47)
-- CODE: 
x 1=1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1=1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1=1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
